Solve spacing issues

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,43 @@
+/* add border box */
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
-
+/* added extra padding to give the white outline */
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-}
+  padding: 5px 10px 5px 10px;
 
+}
+/* changed font size, added padding and margin */
 .title {
+  font-size: 24px;
   background: #e3f4ff;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .content {
+  padding: 15px 0px 15px 5px;
   background: #e3f4ff;
 }
 
 .button-container {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding: 10px 0px 10px 0px;
   background: #e3f4ff;
+  text-align: center;
 }
-
+/* changed the display to box */
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 7px 15px 7px 15px;
+  margin: 0 auto;
 }
